fix scroll-up and modal z-index

--- a/src/sass/_modal-dev.scss
+++ b/src/sass/_modal-dev.scss
@@ -66,6 +66,7 @@
   display: block;
   opacity: 1;
   pointer-events: all;
+  z-index: 10;
 }
 
 .modal__close-button {
