--- a/src/sass/_modal-main.scss
+++ b/src/sass/_modal-main.scss
@@ -2,6 +2,7 @@ body.show-modal .backdrop {
   opacity: 1;
   visibility: visible;
   pointer-events: initial;
+  z-index: 10;
 }
 
 // в статіке
