--- a/src/sass/_scroll-top.scss
+++ b/src/sass/_scroll-top.scss
@@ -5,7 +5,7 @@
   padding: 10px;
 
   position: fixed;
-  z-index: 99;
+  z-index: 5;
 
   bottom: 110px;
   right: 10px;
